modified:   css/main.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                 <form>
 
 
-                    <label for="nom">Nom</label> <br>
+                    <label for="nom">Nom*</label> <br>
                     <input type="text" id="nom" name="nom" placeholder="Votre nom" aria-required="true" autofocus> <br>
 
-                    <label for="prenom">Prénom</label> <br>
+                    <label for="prenom">Prénom*</label> <br>
                     <input type="text" id="prenom" name="prenom" placeholder="Votre prénom" aria-required="true"> <br>
 
-                    <label for="email">Mail</label> <br>
+                    <label for="email">Mail*</label> <br>
                     <input type="text" id="email" name="email" placeholder="Votre mail" aria-required="true"> <br>
 
-                    <label for="password">Mot de passe</label> <br>
+                    <label for="password">Choisir votre mot de passe*</label> <br>
                     <input type="password" id="password" name="password" placeholder="Votre mot de passe" aria-required="true"> <br>
 
                     <input type="submit" id="submit" value="Valider votre compte" aria-label="Valider">
