--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<?php
+<!-- <?php
 session_start();
 ?>
 
 <?php
 include_once("./src/head.inc.php");
-?>
+?> -->
+<!DOCTYPE html>
+<html lang="fr">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./asset/mail.png">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Gmail</title>
+
+</head>
 <header>
 
     <a href="#"><img src="./asset/imagegmail.png" alt="gmail" loading="lazy"></a>
@@ -72,9 +83,9 @@ include_once("./src/head.inc.php");
             </fieldset>
         </div>
 
-        <?php
+        <!-- <?php
         include_once "./src/inscription_user.inc.php";
-        ?>
+        ?> -->
     </main>
 </body>
 
