--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ include_once("./src/head.inc.php");
         <ul>
 
             <li><a href="#">POUR LES PROS</a></li>
-            <li><a href="#">CONNEXION</a></li>
-            <li><a href="#">CRÉER UN COMPTE</a></li>
+            <li><a href="#connection">CONNEXION</a></li>
+            <li><a href="#connection">CRÉER UN COMPTE</a></li>
 
         </ul>
     </nav>
@@ -40,7 +40,7 @@ include_once("./src/head.inc.php");
 
             <h2>Retrouvez la fluidité et la simplicité de Gmail sur tous vos appareil</h2>
 
-            <a href="#">CRÉER UN COMPTE</a>
+            <a href="#connection">CRÉER UN COMPTE</a>
 
         </section>
 
@@ -76,7 +76,7 @@ include_once("./src/head.inc.php");
 
                     <label for="password">Choisir votre mot de passe*</label> <br>
                     <input type="password" id="password" name="password" placeholder="Votre mot de passe" aria-required="true"> <br>
-
+                    
                     <input type="submit" id="submit" value="Valider votre compte" aria-label="Valider">
 
                 </form>
